--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
     <!-- Agrega el manejo de autenticación. -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js">
     </script>
-    <script src="js/init.js"></script>
+    <script>
+        /*  Initializa Firebase con la configuración del proyecto. Revisa la
+ * configuración en tu servidor de Firebase.  */
+// @ts-ignore
+firebase.initializeApp({
+  apiKey: "AIzaSyDOpR-Ept16bX781KnmfIP2v9MA1PnvyGo",
+  authDomain: "proyecto-ahm.firebaseapp.com",
+  projectId: "proyecto-ahm",
+  storageBucket: "proyecto-ahm.appspot.com",
+  messagingSenderId: "620283301335",
+  appId: "1:620283301335:web:e92096c088ae08c71c0f92",
+  measurementId: "G-B60DT98CT3"
+    });
+      
+    </script>
   </head>
   <body>
     <h1>Autenticación</h1>
